force-app/main/default/objects/GoodsPOProduct__c/GoodsPOProduct__c.object-meta.xml
<CustomObject>
    <label>Goods P/O+Product</label>
    <nameField>
        <displayFormat>GPPD-{000000}</displayFormat>
        <label>GOODS P/O+PRODUCT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goods P/O+Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>