force-app/main/default/objects/GoodsPOProduct__c/fields/AmountOfBuyingTax__c.field-meta.xml
<CustomField>
    <fullName>AmountOfBuyingTax__c</fullName>
    <label>AMOUNT OF BUYING TAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>