force-app/main/default/objects/GoodsPOProduct__c/fields/AmountOfBuyingTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountOfBuyingTaxFCY__c</fullName>
    <label>Amount of Buying Tax(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>