force-app/main/default/objects/GoodsPOProduct__c/fields/BuyingAmountInclTax__c.field-meta.xml
<CustomField>
    <fullName>BuyingAmountInclTax__c</fullName>
    <label>BUYING AMOUNT INCL TAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>