force-app/main/default/objects/GoodsPOProduct__c/fields/BuyingAmountInclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>BuyingAmountInclTaxFCY__c</fullName>
    <label>Buying Amount incl Tax(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>