force-app/main/default/objects/GoodsPOProduct__c/fields/CurrencyConversion__c.field-meta.xml
<CustomField>
    <fullName>CurrencyConversion__c</fullName>
    <label>Currency Conversion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CurrencyConversion</valueSetName>
    </valueSet>
</CustomField>