force-app/main/default/objects/GoodsPOProduct__c/fields/Expirationdate__c.field-meta.xml
<CustomField>
    <fullName>Expirationdate__c</fullName>
    <label>Expiration date</label>
    <type>Date</type>
</CustomField>