force-app/main/default/objects/GoodsPOProduct__c/fields/FinalQuantity__c.field-meta.xml
<CustomField>
    <fullName>FinalQuantity__c</fullName>
    <label>FINAL QUANTITY</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>