force-app/main/default/objects/GoodsPOProduct__c/fields/FinalQuantityAllUnit__c.field-meta.xml
<CustomField>
    <fullName>FinalQuantityAllUnit__c</fullName>
    <formula>FinalQuantity__c * ProductID__r.QuantityPerUnit__c</formula>
    <label>Total Final Quantity In All Units</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>