force-app/main/default/objects/GoodsPOProduct__c/fields/GoodsPOID__c.field-meta.xml
<CustomField>
    <fullName>GoodsPOID__c</fullName>
    <label>GOODS PURCHASING ORDER ID</label>
    <referenceTo>GoodsPurchasingOrder__c</referenceTo>
    <relationshipLabel>GOODS P/O+PRODUCT</relationshipLabel>
    <relationshipName>GoodsPOProduct</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>