force-app/main/default/objects/GoodsPOProduct__c/fields/ImportTaxAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>ImportTaxAmountFCY__c</fullName>
    <formula>ProductID__r.ImportTaxAmountFCYProduct__c * FinalQuantity__c</formula>
    <label>Import Tax Amount(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>