force-app/main/default/objects/GoodsPOProduct__c/fields/LotNumber__c.field-meta.xml
<CustomField>
    <fullName>LotNumber__c</fullName>
    <label>Lot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>