force-app/main/default/objects/GoodsPOProduct__c/fields/PlanQuantity__c.field-meta.xml
<CustomField>
    <fullName>PlanQuantity__c</fullName>
    <label>PLAN QUANTITY</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>