force-app/main/default/objects/GoodsPOProduct__c/fields/PlanQuantityAllUnit__c.field-meta.xml
<CustomField>
    <fullName>PlanQuantityAllUnit__c</fullName>
    <formula>PlanQuantity__c *  ProductID__r.QuantityPerUnit__c</formula>
    <label>Total Plan Quantity In All Units</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>