force-app/main/default/objects/GoodsPOProduct__c/fields/RecommendNetWeight__c.field-meta.xml
<CustomField>
    <fullName>RecommendNetWeight__c</fullName>
    <label>RECOMMENDED NET WEIGHT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>