force-app/main/default/objects/GoodsPOProduct__c/fields/TotalAmountOfBuying__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfBuying__c</fullName>
    <label>Total Amount of Buying</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>