force-app/main/default/objects/GoodsPOProduct__c/fields/TotalAmountOfBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfBuyingFCY__c</fullName>
    <label>Total Amount of Buying(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>