force-app/main/default/objects/GoodsPOProduct__c/fields/TotalGrossWeight__c.field-meta.xml
<CustomField>
    <fullName>TotalGrossWeight__c</fullName>
    <label>TOTAL GROSS WEIGHT(Kg)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>