force-app/main/default/objects/GoodsPOProduct__c/fields/TotalMeasurement__c.field-meta.xml
<CustomField>
    <fullName>TotalMeasurement__c</fullName>
    <label>TOTAL MEASUREMENT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>