force-app/main/default/objects/GoodsPOProduct__c/fields/TotalNetWeight__c.field-meta.xml
<CustomField>
    <fullName>TotalNetWeight__c</fullName>
    <label>PLAN NET WEIGHT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>