force-app/main/default/objects/GoodsPOProduct__c/fields/wkQuantityPerUnit__c.field-meta.xml
<CustomField>
    <fullName>wkQuantityPerUnit__c</fullName>
    <formula>ProductID__r.QuantityPerUnit__c</formula>
    <label>wkQuantity Per Unit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>