force-app/main/default/objects/GoodsPOProduct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GoodsPOID__c</columns>
    <columns>ProductName__c</columns>
    <columns>FinalQuantity__c</columns>
    <columns>PlanQuantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>